--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -2,6 +2,8 @@ ext {
     libraries = [:]
 }
 
+libraries.vavr = 'io.vavr:vavr:0.9.0'
+
 def junitPlatformVersion = '1.0.0'
 def junitJupiterVersion  = '5.0.0'
 libraries.junit = [
